fix content height overflow

--- a/src/components/theme.css
+++ b/src/components/theme.css
@@ -9,8 +9,8 @@ body,
 .theme {
   box-sizing: border-box;
   display: flex;
-  height: 100vh;
   margin: 0;
+  min-height: 100vh;
   padding: 0;
   position: relative;
   width: 100vw;
@@ -81,6 +81,7 @@ html[data-theme='light'],
   /* -webkit-font-smoothing: antialiased; */
   /* font-weight: 400; */
   justify-content: center;
+  min-height: 100%;
   /* text-rendering: optimizeLegibility; */
 }
 
@@ -90,6 +91,7 @@ html[data-theme='light'],
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 32px 0;
   padding: 12px;
   position: relative;
   width: 100%;
